cmake_minimum_required(VERSION 3.14)


set(CMAKE_CXX_STANDARD 14)

add_executable(cvte cvte.cpp)
add_executable(untitled_folder main.cpp)
add_executable(4.7.7 4.7.7.cpp)
add_executable(polymorphic2 polymorphic2.cpp)
add_executable(polymorphic polymorphic.cpp)
add_executable(jianzhioffer1 jianzhioffer1.cpp)
add_executable(kuaipai kuaipai.cpp)
add_executable(1 1.cpp)
add_executable(4.9.2 4.9.2.cpp)
add_executable(4.9.4 4.9.4.cpp)
add_executable(4.1.10 4.1.10.cpp)
add_executable(4.10.5 4.10.5.cpp)
add_executable(4.7.9 4.7.9.cpp)
add_executable(4.14.1 4.14.1.cpp)
add_executable(4.14.1-1 4.14.1-1.cpp)
add_executable(4.11.1 4.11.1.cpp)
add_executable(4.15.7 4.15.7.cpp)
add_executable(4.15.14 4.15.14.cpp)
add_executable(4.15.15 4.15.15.cpp)
add_executable(6.1.1 6.1.1.cpp)
add_executable(6.1.4 6.1.4.cpp)
add_executable(6.3.2 6.3.2.cpp)
add_executable(6.2.4 6.2.4.cpp)
add_executable(6.1.5 6.1.5.cpp)
add_executable(6.1.6 6.1.6.cpp)
add_executable(6.1.8 6.1.8.cpp)
add_executable(6.1.12 6.1.12.cpp)
add_executable(6.1.14 6.1.14.cpp)
add_executable(6.1.10 6.1.10.cpp)
add_executable(6.1.18 6.1.18.cpp)
add_executable(6.5.5 6.5.5.cpp)
add_executable(6.5.4 6.5.4.cpp)
add_executable(2018_zhongxing_bishi_1 2018_zhongxing_bishi_1.cpp)
add_executable(niuketest1 niuketest1.cpp)

add_executable(sample_package1 sample_package1.cpp)
add_executable(sample_package sample_package.cpp)
add_executable(mataqipan mataqipan.cpp)
